...
    <string name="item_data_sensor_condition">Condition</string>
    <string name="item_data_sensor_temperature">Temperature</string>
    <string name="item_data_sensor_description">Description</string>

    <string name="menu_main_log_out">Log Out</string>
    <string name="menu_main_account_details">Account details</string>
    <string name="menu_main_about_app">About App</string>

    <string name="fab_description">Add new sensor</string>

    <string name="dialog_create_title">Add a new sensor</string>
    <string name="dialog_create_et_hint_sensor_name">Name</string>
    <string name="dialog_create_et_hint_sensor_description">Description</string>
...


    <string name="toast_error_empty_fields">Please fill all required fields</string>
    <string name="toast_reg_success">Registration is successful</string>
    <string name="toast_reg_failed">Failed to register. Try again.</string>
    <string name="toast_reset_success">Password send to your email</string>
    <string name="toast_login_success">Login is successful</string>
    <string name="toast_login_failed">Login failed</string>
    <string name="toast_dialog_empty_sensor_name">Please try again and give your sensor a name</string>
    <string name="toast_dialog_delete_success">Account Deleted</string>
    <string name="toast_menu_log_out">Logged Out</string>
    <string name="toast_update_success">User details updated</string>
    <string name="toast_update_failed">Something is wrong</string>
...
    <string name="toast_sensor_data_auto_watering_on">Auto Watering successfully turn on</string>
    <string name="toast_sensor_data_auto_watering_off">Auto Watering turn off</string>
    <string name="toast_sensor_data_auto_watering_error">Something is wrong. Setting impossible</string>
    <string name="toast_sensor_data_update_success">Sensor Data updated</string>
    <string name="toast_sensor_data_update_failed">Something is wrong. Updating impossible</string>
    <string name="toast_sensor_data_dialog_delete">Sensor deleted</string>
    <string name="toast_about_add_copied_success">Link successfully copied</string>
    <string name="toast_sensor_data_auto_sleep_mode_on">Auto Sleep Mode successfully turn on</string>
    <string name="toast_sensor_data_auto_sleep_mode_off">Auto Sleep Mode turn off</string>


    <string name="error_invalid_email">Please provide a valid email</string>
    <string name="error_invalid_password">Password should be at least 6 characters</string>
    <string name="error_empty_sensor_name">Please give your sensor a name</string>

    <string name="intro_btn_next">Next</string>
    <string name="intro_screen_one_sen_1">Hello, this App is a part of the IoT project</string>
    <string name="intro_screen_one_sen_2">Water Your Plants</string>
    <string name="intro_screen_two_sen_1">Unfortunately, you cannot use this App</string>
    <string name="intro_screen_two_sen_2">because it\'s for demo purposes.</string>
    <string name="intro_screen_two_sen_3">But you can use a source code.</string>
    <string name="intro_screen_three_sen_1">For further information</string>
    <string name="intro_screen_three_sen_2">read About App in the main menu</string>
    <string name="intro_btn_start">Get started</string>
    <string name="intro_btn_skip">Skip</string>

    <string name="about_app_title">Water Your Plants</string>
    <string name="about_app_part_1">is an IoT project (Arduino moisture soil sensors and water pumps, Android App to configure these).</string>
    <string name="about_app_part_2">This particular App is an example, you can download a source code from here:</string>
    <string name="about_app_link_project">https://github.com/aolikas/WaterYourPlants.git</string>
    <string name="about_app_btn_copy_link_description">Copy a link project</string>
    <string name="about_app_part_3">All details describe in Read.me file. Also all Arduino sketches with annotation on this link below:</string>
    <string name="about_app_link_arduino">https://github.com/aolikas/WaterYourPlantsAduino.git</string>


</resources>
