<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".introSlide.IntroActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/intro_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/intro_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/gray_dark"
        android:text="@string/intro_btn_next" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/intro_btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/gray_dark"
        android:text="@string/intro_btn_skip" />
</merge>