<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/intro_img_screen_one"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/app_icon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/intro_screen_one_sen_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/intro_screen_one_sen_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/intro_screen_one_sen_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/intro_screen_one_sen_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="italic" />

</LinearLayout>