...
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/about_app_link_project"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/about_app_btn_copy_link_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/about_app_btn_copy_link_description"
                android:src="@drawable/ic_content_copy" />

...
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/about_app_link_arduino"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/about_app_btn_copy_link_arduino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/about_app_btn_copy_link_description"
                android:src="@drawable/ic_content_copy" />
        </RelativeLayout>
...
